objects/FSLABB_TimeBooking__e.object
<CustomObject>
    <description>FSL Generated when a Time Sheet Entry is approved to be sent to SAP ERP.</description>
    <fields>
        <fullName>FSLABB_RecordEntity__c</fullName>
        <description>FSL The type of the record that initiated the event.</description>
        <label>Record Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_RecordId__c</fullName>
        <description>FSL The Id of the record that initiated the event.</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPId__c</fullName>
        <description>FSL Id of the SAP Operation (for work-related entries) or other cost collectors (for non-work-related entries).</description>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_SAPSystem__c</fullName>
        <description>FSL Identifier of the SAP ERP system to send the Time Sheet data to.</description>
        <label>SAP System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Time Booking Notification</label>
    <pluralLabel>FSL Time Booking Notifications</pluralLabel>
</CustomObject>